--- a/Trueques/Trueques/Site.Master
+++ b/Trueques/Trueques/Site.Master
@@ -51,7 +51,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/Login">Login</a></li>
-                        <li><a runat="server" href="~/Registrar">Registrar</a></li>
+                        <li><a runat="server" href="~/Registro">Registrar</a></li>
                     </ul>
                 </div>
             </div>
