--- a/Trueques/Trueques/Site.Master
+++ b/Trueques/Trueques/Site.Master
@@ -48,12 +48,21 @@
                     </button>
                     <a class="navbar-brand" runat="server" href="~/"><img src="/Img/Logo.jpg" width="70" height="50"/></a>
                 </div>
+                <%if (Convert.ToString(Session["user"]) == "" || Convert.ToString(Session["user"]) == null) {%>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/Login">Login</a></li>
                         <li><a runat="server" href="~/Registro">Registrar</a></li>
                     </ul>
                 </div>
+                <%}else{ %>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a runat="server" href="~/Panel_Usuario">Panel </a></li>
+                        <li><a runat="server" href="~/Login">Cerrar sesion</a></li>
+                    </ul>
+                </div>
+                <%} %>
             </div>
         </div>
         <div class="container body-content">
